# Intelligent-Door-Lock

./: CMakeLists.txt  README.md  realtime_face_detection - 副本.cpp  realtime_face_detection.cpp  realtime_face_detection.hpp  test.cpp
Elock/: CMakeLists.txt  Elock.pro  Makefile  live.cpp  live.h  livefacereco.cpp  livefacereco.hpp  main.cpp  moc_welcome.cpp  ui_welcome.h  welcome.cpp  welcome.h  welcome.h.autosave  welcome.ui
Elock/src/: defs.hpp  live.cpp  live.h  livefacereco.hpp  main.cpp  math.hpp  parallel_video_capture.cpp  welcome.cpp  welcome.h  welcome.ui
SCR/: CMakeLists.txt
SCR/DatasetHandler/Test/: CMakeLists.txt
SCR/RealtimeVideoCapture/: CMakeLists.txt
include/: FacePreprocess.h
src/: arcface.cpp  arcface.h  defs.hpp  live.cpp  livefacereco.cpp  livefacereco.hpp  main.cpp  math.hpp  parallel_video_capture.hpp  welcome.cpp
